--- a/main.html
+++ b/main.html
@@ -9,22 +9,22 @@
     <link rel="stylesheet" href="./footer.css">
   </head>
   <body>
-    <header>
-      <div class="header-content">
-        <h2>MNTN</h2>
-        <nav>
-          <a href="#">Equipment</a>
-          <a href="#">About us</a>
-          <a href="#">Blog</a>
-        </nav>
-        <div class="account">
-          <img src="./assets/icon-persone.svg" alt="persone" />
-          <a href="#">Account</a>
-        </div>
-      </div>
-    </header>
     <main>
       <section class="hero-section">
+        <header>
+          <div class="header-content">
+            <h2>MNTN</h2>
+            <nav>
+              <a href="#">Equipment</a>
+              <a href="#">About us</a>
+              <a href="#">Blog</a>
+            </nav>
+            <div class="account">
+              <img src="./assets/icon-persone.svg" alt="persone" />
+              <a href="#">Account</a>
+            </div>
+          </div>
+        </header>
         <div class="section-content">
           <div class="links-left">
             <a href="#">Follow us</a>
@@ -55,6 +55,7 @@
         </div>
       </section>
       <section class="card-section">
+        <div class="blue-shadow"></div>
         <div class="card-wrapper">
           <div class="card">
             <div class="card-content">
